examples/bad/02-02-invalid-comparison.lagger
int main(){
    int a = 1;
    string b = "hello";
    if (a == b){
        println("a == b");
    }
    return 0;
}